# Crowpanel_ImgTTS_Fairy_Tale

./: CMakeLists.txt  partitions.csv  readme.md  readme_add_scenario.md  readme_edit_scenario.md  sdkconfig.defaults
components/gifdec/: CMakeLists.txt  gifdec.c
components/lvgl__lvgl/: CMakeLists.txt
components/ringbuf/: CMakeLists.txt  fifo_ringbuf.c  fifo_ringbuf.h
components/ui/: CMakeLists.txt  builtin_texts_alb.c  builtin_texts_fairy_tale.c  builtin_texts_third.c  story_fairy_tale.c  tts_bridge_impl.c  ui.c  ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_events.c  ui_font_Font1.c  ui_font_Font2.c  ui_img_loading_gif.c  ui_img_manager.c  user_name_store.c
components/ui/album/: ui_img_01_a_png.c  ui_img_02_a_png.c  ui_img_05_a_png.c  ui_img_06_a_png.c  ui_img_08_a_png.c  ui_img_09_a_png.c  ui_img_10_b_png.c  ui_img_11_a_png.c  ui_img_12_a_png.c  ui_img_13_a_png.c  ui_img_14_b_png.c  ui_img_15_a_png.c  visuals_alb.c
components/ui/fairy_tale/: ui_img_a_png.c  ui_img_b1_1_1_png.c  ui_img_b1_1_2_png.c  ui_img_b1_1_png.c  ui_img_b1_2_1_png.c  ui_img_b1_2_2_png.c  ui_img_b1_2_png.c  ui_img_b1_png.c  ui_img_b2_1_1_png.c  ui_img_b2_1_2_png.c  ui_img_b2_1_png.c  ui_img_b2_2_1_png.c  ui_img_b2_2_2_png.c  ui_img_b2_2_png.c  ui_img_b2_png.c  ui_img_d10_png.c  ui_img_d11_png.c  ui_img_d12_png.c  ui_img_d13_png.c  ui_img_d14_png.c  ui_img_d15_png.c  ui_img_d16_png.c  ui_img_d1_png.c  ui_img_d2_png.c  ui_img_d3_png.c  ui_img_d4_png.c  ui_img_d5_png.c  ui_img_d6_png.c  ui_img_d7_png.c  ui_img_d8_png.c  ui_img_d9_png.c  visuals_fairy_tale.c
components/ui/fairy_tale/ui_l/: ui_img_a_l_png.c  ui_img_b1_1_1_l_png.c  ui_img_b1_1_2_l_png.c  ui_img_b1_1_l_png.c  ui_img_b1_2_1_l_png.c  ui_img_b1_2_2_l_png.c  ui_img_b1_2_l_png.c  ui_img_b1_l_png.c  ui_img_b2_1_1_l_png.c  ui_img_b2_1_2_l_png.c  ui_img_b2_1_l_png.c  ui_img_b2_2_1_l_png.c  ui_img_b2_2_2_l_png.c  ui_img_b2_2_l_png.c  ui_img_b2_l_png.c  ui_img_d10_l_png.c  ui_img_d11_l_png.c  ui_img_d12_l_png.c  ui_img_d13_l_png.c  ui_img_d14_l_png.c  ui_img_d15_l_png.c  ui_img_d16_l_png.c  ui_img_d1_l_png.c  ui_img_d2_l_png.c  ui_img_d3_l_png.c  ui_img_d4_l_png.c  ui_img_d5_l_png.c  ui_img_d6_l_png.c  ui_img_d7_l_png.c  ui_img_d8_l_png.c  ui_img_d9_l_png.c
components/ui/fairy_tale/ui_s/: ui_img_a_s_png.c  ui_img_b1_1_1_s_png.c  ui_img_b1_1_2_s_png.c  ui_img_b1_1_s_png.c  ui_img_b1_2_1_s_png.c  ui_img_b1_2_2_s_png.c  ui_img_b1_2_s_png.c  ui_img_b1_s_png.c  ui_img_b2_1_1_s_png.c  ui_img_b2_1_2_s_png.c  ui_img_b2_1_s_png.c  ui_img_b2_2_1_s_png.c  ui_img_b2_2_2_s_png.c  ui_img_b2_2_s_png.c  ui_img_b2_s_png.c  ui_img_d10_s_png.c  ui_img_d11_s_png.c  ui_img_d12_s_png.c  ui_img_d13_s_png.c  ui_img_d14_s_png.c  ui_img_d15_s_png.c  ui_img_d16_s_png.c  ui_img_d1_s_png.c  ui_img_d2_s_png.c  ui_img_d3_s_png.c  ui_img_d4_s_png.c  ui_img_d5_s_png.c  ui_img_d6_s_png.c  ui_img_d7_s_png.c  ui_img_d8_s_png.c  ui_img_d9_s_png.c
components/ui/include/: builtin_texts.h  scenario_build.h  story_fairy_tale.h  tts_bridge.h  ui.h  ui_Screen1.h  ui_Screen2.h  ui_Screen3.h  ui_events.h  ui_helpers.h  user_name_store.h  visuals.h
components/ui/screens/: ui_img_arrow_png.c  ui_img_question_png.c  ui_img_sett_off_png.c
components/ui/static_icons/: ui_img_bird_png.c  ui_img_choice_png.c  ui_img_frame_lrg_png.c  ui_img_frame_sml_png.c  ui_img_night_png.c  ui_img_reload_png.c  ui_img_save_png.c  ui_img_sett_on_png.c  ui_img_speech_png.c
components/ui/third/: visuals_third.c
components/ui/travel/: ui_img_08_png.c  ui_img_10_png.c  ui_img_12_png.c  visuals_trav.c
firmware/: flash_tool.md
main/: CMakeLists.txt  HxTTS.cpp  idf_component.yml  lvgl_port_v8.cpp  lvgl_port_v8.h  lvgl_v8_port.cpp  main.cpp  tts_bridge.cpp  uart_json.c  uart_json.h
main/entities/: AudioPlayer.cpp  AudioPlayer.h  HimaxModule.cpp  HimaxModule.h
main/entities/i2c_comm/: crc_table.h  i2c_master.c  i2c_master.h  i2c_protocol.h
main/entities/i2s/: i2s_tx.c  i2s_tx.h
main/hm_ctrl/: hm_comm_protocol.c
python/: app.py  requirements.txt
spiffs_root/: zlib_script.py
